added tracking for budget amount left

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header-container">
         <h1>Budget Tracker</h1>
-        * Next thing to add could be a value that shows how much money you'll have until you reach or surpass your budget.
+        <!-- * Next thing to add could be a value that shows how much money you'll have until you reach or surpass your budget. -->
     </div>
 
     <div class="content-container">
@@ -21,6 +21,7 @@
              max budget, then display that to the user -->
         <h3>General Spending</h3>
         <p>Limit: $<span id="general-spending-limit">100</span></p>
+        <p><span style="font-weight: bold">Budget Left:</span> $<span id="general-spending-left">0</span></p>
         <p id="gs-limit-exceeded"></p>
 
         <div id="general-spending-container">
@@ -39,6 +40,7 @@
 
         <h3>Groceries</h3>
         <p>Limit: $<span id="grocery-limit">100</span></p>
+        <p><span style="font-weight: bold">Budget Left:</span> $<span id="grocery-left">0</span></p>
         <p id="g-limit-exceeded"></p>
 
         <div id="groceries-container">
@@ -58,6 +60,7 @@
 
         <h3>Savings</h3>
         <p>Limit: $<span id="savings-limit">100</span></p>
+        <p><span style="font-weight: bold">Budget Left:</span> $<span id="savings-left">0</span></p>
         <p id="s-limit-exceeded"></p>
 
         <div id="savings-container">
